plugins {
    id 'application'
    id 'checkstyle'
    id 'jacoco'
    id 'pmd'
    id 'com.github.ben-manes.versions' version '0.51.0'
    id 'info.solidsoft.pitest' version '1.15.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.owasp.dependencycheck' version '10.0.4'
    id 'org.sonarqube' version '4.4.1.3373'
    id 'org.springframework.boot' version '3.1.12'
    id 'uk.gov.hmcts.java' version '0.12.68'
    id 'au.com.dius.pact' version '4.6.20'
    id "io.freefair.lombok" version "9.2.0"
    id 'org.openrewrite.rewrite' version '7.30.0'
    id "net.serenity-bdd.serenity-gradle-plugin" version "3.6.22"
}

rewrite {
//    activeRecipe('org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_0')
  activeRecipe('org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_1')
//  activeRecipe('org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_2')
//  activeRecipe('org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_3')
//  activeRecipe('org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_4')
//  activeRecipe('org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_5')
//  activeRecipe('org.openrewrite.java.migrate.UpgradeToJava21')
//  setExportDatatables(true)
}

apply plugin: 'java'
apply plugin: 'project-report'
apply plugin: 'idea'

mainClassName = 'uk.gov.hmcts.reform.iacasedocumentsapi.Application'
def jarName = 'ia-case-documents-api.jar'

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

compileJava {
    options.compilerArgs << '-parameters' << '-Xlint:deprecation' << "-Xlint:unchecked"
}

compileTestJava {
    options.compilerArgs << '-Xlint:deprecation' << "-Xlint:unchecked"
}

tasks.withType(Test) {
    useJUnitPlatform {}

    testLogging {
        exceptionFormat = 'full'
    }
}

ext.libraries = [
    junit5: [
        "org.junit.jupiter:junit-jupiter-api:5.13.4",
        "org.junit.jupiter:junit-jupiter-engine:5.13.4",
        "org.junit.jupiter:junit-jupiter-params:5.13.4",
        "org.junit.platform:junit-platform-commons:1.13.4",
        "org.junit.platform:junit-platform-engine:1.13.4",
        "org.junit.platform:junit-platform-launcher:1.13.4"
    ]
]

sourceSets {

    integrationTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/integrationTest/java')
        }
        resources.srcDir file('src/integrationTest/resources')
    }

    functionalTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/functionalTest/java')
        }
        resources.srcDir file('src/functionalTest/resources')
    }

    smokeTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/smokeTest/java')
        }
        resources.srcDir file('src/smokeTest/resources')
    }
    contractTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/contractTest/java')
        }
        resources.srcDir file('src/contactTest/resources')
    }
}

processFunctionalTestResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

processIntegrationTestResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

idea {
    module {
        testSourceDirs += project.sourceSets.integrationTest.java.srcDirs
        testResourceDirs += project.sourceSets.integrationTest.resources.srcDirs
        testSourceDirs += project.sourceSets.functionalTest.java.srcDirs
        testResourceDirs += project.sourceSets.functionalTest.resources.srcDirs
        testSourceDirs += project.sourceSets.smokeTest.java.srcDirs
        testSourceDirs += project.sourceSets.contractTest.java.srcDirs
        testResourceDirs += project.sourceSets.smokeTest.resources.srcDirs
    }
}

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestCompile.extendsFrom testCompile
    integrationTestRuntime.extendsFrom testRuntime
    functionalTestImplementation.extendsFrom testImplementation
    functionalTestCompile.extendsFrom testCompile
    functionalTestRuntime.extendsFrom testRuntime
    contractTestImplementation.extendsFrom testImplementation
    contractTestCompile.extendsFrom testCompile
    contractTestRuntime.extendsFrom testRuntime
}

checkstyle {
    maxWarnings = 0
    toolVersion = '10.12.5'
    configDirectory.set(new File(rootDir, 'config/checkstyle'))
}


pmd {
    toolVersion = '6.55.0'
    ignoreFailures = true
    sourceSets = [sourceSets.main, sourceSets.test, sourceSets.integrationTest, sourceSets.functionalTest, sourceSets.smokeTest]
    reportsDir = file("${project.buildDir}/reports/pmd")
    ruleSets = [
        'category/java/bestpractices.xml'
    ]
}

task integration(type: Test, description: 'Runs the integration tests.', group: 'Verification') {
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
}

task functional(type: Test, description: 'Runs the functional tests.', group: 'Verification') {

    systemProperty "scenario", System.getProperty('scenario')
    systemProperty "file.encoding", "UTF-8"

    testClassesDirs = sourceSets.functionalTest.output.classesDirs
    classpath = sourceSets.functionalTest.runtimeClasspath
    finalizedBy aggregate
    testLogging {
        showStackTraces = true
        showStandardStreams = true
        showCauses = true
        showExceptions = true
    }
}

task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verification') {
    testClassesDirs = sourceSets.smokeTest.output.classesDirs
    classpath = sourceSets.smokeTest.runtimeClasspath
}


task contract(type: Test, description: 'Runs the pact contract tests.', group: 'Verification') {
    description = "Runs the consumer Pact tests"
    useJUnitPlatform()
    testClassesDirs = sourceSets.contractTest.output.classesDirs
    classpath = sourceSets.contractTest.runtimeClasspath
}

task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

project.ext {
    pactVersion = getCheckedOutGitCommitHash()
}

jacoco {
    toolVersion = "0.8.13"
}

jacocoTestReport {
    executionData(test, integration)
    reports {
        xml.required.set(true)
        csv.required.set(false)
        xml.outputLocation.set(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
    }
}

pitest {
//    print('./gradlew --version'.execute().text.trim())
    junit5PluginVersion = '1.2.3'
    pitestVersion = "1.16.2"
    targetClasses = ['uk.gov.hmcts.reform.iacasedocumentsapi.*']
    excludedClasses = [
        'uk.gov.hmcts.reform.iacasedocumentsapi.infrastructure.config.*',
        'uk.gov.hmcts.reform.iacasedocumentsapi.Application',
        'uk.gov.hmcts.reform.iacasedocumentsapi.infrastructure.TsvStringProvider'
    ]
    threads = 10
    outputFormats = ['XML', 'HTML']
    timestampedReports = false
    failWhenNoMutations = false
    verbose = true
    mutationThreshold = 85
}

project.tasks['pitest'].group = "Verification"

sonarqube {
    properties {
        property "sonar.projectName", "IA :: Immigration & Asylum case documents api"
        property "sonar.projectKey", "IACASEDOCUMENTSAPI"
        property "sonar.coverage.jacoco.xmlReportPaths", layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml").get().asFile
        property "sonar.pitest.mode", "reuseReport"
        property "sonar.pitest.reportsDirectory", "build/reports/pitest"
        property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/iacasedocumentsapi/infrastructure/config/**," +
                                     "src/main/java/uk/gov/hmcts/reform/iacasedocumentsapi/infrastructure/SystemDateProvider.java," +
                                     "src/main/java/uk/gov/hmcts/reform/iacasedocumentsapi/Application.java"
        property "sonar.cpd.exclusions", "src/main/java/uk/gov/hmcts/reform/iacasedocumentsapi/domain/entities/AsylumCase.java," +
                                         "src/main/java/uk/gov/hmcts/reform/iacasedocumentsapi/domain/entities/AsylumCaseBuilder.java," +
                                         "src/main/java/uk/gov/hmcts/reform/iacasedocumentsapi/domain/templates/**"
    }
}

project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport
project.tasks['sonarqube'].group = "Verification"

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
    }
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2022.0.5'
    }
    dependencies {

        dependencySet(group: 'org.yaml', version: '2.4') {
            entry 'snakeyaml'
        }

        dependencySet(group: 'commons-fileupload', version: '1.6.0') {
            entry 'commons-fileupload'
        }


        dependencySet(group: 'com.fasterxml.jackson.core', version: '2.19.2') {
            entry 'jackson-databind'
            entry 'jackson-core'
            entry 'jackson-annotations'
        }

        dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.19.2') {
            entry 'jackson-dataformat-yaml'
            entry 'jackson-dataformat-csv'
        }

        dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.19.2') {
            entry 'jackson-datatype-jsr310'
            entry 'jackson-datatype-jdk8'
        }
    }
}

dependencies {
    rewrite('org.openrewrite.recipe:rewrite-migrate-java:3.32.0')
    rewrite('org.openrewrite.recipe:rewrite-spring:6.28.2')
    modules {
        module("org.codehaus.groovy:groovy") {
            replacedBy("org.apache.groovy:groovy", "conflicts in current rest-assured version")
        }
        module("org.codehaus.groovy:groovy-xml") {
            replacedBy("org.apache.groovy:groovy-xml", "conflicts in current rest-assured version")
        }
        module("org.codehaus.groovy:groovy-json") {
            replacedBy("org.apache.groovy:groovy-json", "conflicts in current rest-assured version")
        }
    }

    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'


    implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client'
    implementation group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server'
    implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose'

    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine'
    // CVE-2019-17195
    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.48'

    // CVE-2021-27568
    implementation group: 'net.minidev', name: 'json-smart', version: '2.5.2'

    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations'
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310'
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv'

    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.2.0'

    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.32'
    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.32'
    implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '8.1'

    implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.9'

    implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
    implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '7.0.0'
    implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.3'

    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.18.0'
    implementation group: 'commons-io', name: 'commons-io', version: '2.20.0'

    implementation group: "jakarta.servlet", name: "jakarta.servlet-api", version: "6.0.0"

    implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '10.1.54'
    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.1.54'

    implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '6.3.0'
    implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
    implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'

    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.23.0'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.23.0'
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
    testImplementation group: 'org.springframework.security', name: 'spring-security-test'

    // TODO delete this after upgrade to java 21
    implementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.18.8'

    testImplementation group: 'org.pitest', name: 'pitest', version: '1.16.2'
    testImplementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: '1.5.0'
    testImplementation group: 'io.rest-assured', name: 'rest-assured-all', version: '5.5.7'
    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.5.7'
    testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: '4.2.31'
    testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: '4.2.31'
    testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: '4.2.31'
    testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: '4.2.31'

    testImplementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'

    testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.10', classifier: 'all', {
        exclude group: 'commons-io', module: 'commons-io'
        exclude group: 'org.apache.commons', module: 'commons-lang3'
    }

    testImplementation 'pl.pragmatists:JUnitParams:1.1.1'

    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'

    //pact contract testing
    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: "4.4.9"

    contractTestImplementation("org.junit.jupiter:junit-jupiter-api:5.13.4")
    contractTestRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.13.4")
    contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.13.4')

    integrationTestImplementation sourceSets.main.runtimeClasspath
    integrationTestImplementation sourceSets.test.runtimeClasspath

    functionalTestImplementation sourceSets.main.runtimeClasspath
    functionalTestImplementation sourceSets.test.runtimeClasspath

    smokeTestImplementation sourceSets.main.runtimeClasspath
    smokeTestImplementation sourceSets.test.runtimeClasspath

    contractTestImplementation sourceSets.main.runtimeClasspath
    contractTestImplementation sourceSets.test.runtimeClasspath

}

pact {
    publish {
        pactDirectory = 'target/pacts'
        pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
        tags = [System.getenv("PACT_BRANCH_NAME") ?: 'Dev']
        version = project.pactVersion
    }
}

dependencyCheck {
    suppressionFile = 'https://raw.githubusercontent.com/hmcts/ia-owasp-suppressions/refs/heads/master/ia-case-documents-api/suppressions.xml'
}

dependencyUpdates.resolutionStrategy = {
    componentSelection { rules ->
        rules.all { ComponentSelection selection ->
            boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
                selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
            }
            if (rejected) {
                selection.reject('Release candidate')
            }
        }
    }
}

def getCheckedOutGitCommitHash() {
    'git rev-parse --verify --short HEAD'.execute().text.trim()
}

gradle.startParameter.continueOnFailure = true

bootJar {
    setArchiveFileName(jarName)
    manifest {
        attributes('Implementation-Version': project.version.toString())
    }
}

// this is required to force Java running on the Azure Windows Server OS into using
// UTF-8 as the default character set instead of windows-1252 which causes issues.
// this setting only applies when running via gradle bootRun -- see web.config for the
// java flag that configures the deployed appllications
applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}

